--- a/Solemne1_JoseLuisSanMartin.ipynb
+++ b/Solemne1_JoseLuisSanMartin.ipynb
@@ -14,7 +14,7 @@
     "---\n",
     "\n",
     "\n",
-    "* Nombre:\n"
+    "* Nombre: José Luis San Martín\n"
    ]
   },
   {
@@ -1194,7 +1194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podria relacionarse el valor minimo y el maximo con respecto a el promedio, el reemplazo de valores outliers podria ser por el promedio o el valor que mas se repite y "
+    "Podria relacionarse el valor minimo y el maximo con respecto a el promedio, el reemplazo de valores outliers podria ser por el promedio o el valor que mas se repite y para ver que categorias tienen una mayor relacion a partir de una variable que estemos estudiando podria hacerse un diagrama de calor."
    ]
   },
   {
